<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraitLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="563dp"
        android:layout_height="36dp"

        android:text="@string/vota_o_do_item_de_pauta_01"
        android:textSize="25sp"
        android:visibility="visible"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="19dp"
        tools:layout_editor_absoluteY="46dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="558dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textView1"
        android:text="@string/t_tulo_do_item"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="122dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="558dp"
        android:layout_height="23dp"
        android:layout_below="@+id/textView2"
        android:text="@string/relator"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="168dp" />


    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="143dp"
        android:layout_height="wrap_content"
        android:text="@string/absten_o"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="409dp"
        tools:layout_editor_absoluteY="549dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radioButton3"
        android:text="@string/confirmar_voto"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="426dp"
        tools:layout_editor_absoluteY="730dp" />

    <android.support.constraint.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <RadioButton
        android:id="@+id/radioButton4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="À favor"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="250dp" />

    <RadioButton
        android:id="@+id/radioButton5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Contra"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="305dp" />

    <RadioButton
        android:id="@+id/radioButton6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Abstenção"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="362dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="votar"
        tools:layout_editor_absoluteX="280dp"
        tools:layout_editor_absoluteY="490dp" />

</android.support.constraint.ConstraintLayout>